objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Evals_P1_Negotiating_Expertise_avg__c</fullName>
        <formula>Evals_P1_Negotiating_Expertise_sum__c / Evals_P1_Negotiating_Expertise_count__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - P1 - Negotiating Expertise avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Negotiating_Expertise_count__c</fullName>
        <label>Evals - P1 - Negotiating Expertise count</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Presenter_1_Negotiating_Exerptise__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Negotiating_Expertise_sum__c</fullName>
        <label>Evals - P1 - Negotiating Expertise sum</label>
        <summarizedField>Response_Evaluation__c.SC_Presenter_1_Negotiating_Exerptise__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Overall_avg__c</fullName>
        <formula>Evals_P1_Overall_sum__c / Evals_P1_Overall_count__c / 5</formula>
        <label>Evals - P1 - Overall avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Overall_count__c</fullName>
        <label>Evals - P1 - Overall count</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Presenter_1_Overall__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Overall_sum__c</fullName>
        <label>Evals - P1 - Overall sum</label>
        <summarizedField>Response_Evaluation__c.SC_Presenter_1_Overall__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Responsiveness_avg__c</fullName>
        <formula>Evals_P1_Responsiveness_sum__c / Evals_P1_Responsiveness_count__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - P1 - Responsiveness avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Responsiveness_count__c</fullName>
        <label>Evals - P1 - Responsiveness count</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Presenter_1_Responsiveness__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_P1_Responsiveness_sum__c</fullName>
        <label>Evals - P1 - Responsiveness sum</label>
        <summarizedField>Response_Evaluation__c.SC_Presenter_1_Responsiveness__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_average_Your_Workshop_YW__c</fullName>
        <formula>(Evals_avg_YW_apply_learnings__c + Evals_avg_YW_content__c + Evals_avg_YW_Duration__c + Evals_avg_YW_materials__c + Evals_avg_YW_objectives__c + Evals_avg_YW_recommend__c + Evals_avg_YW_theory_and_practice__c)/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - average Your Workshop (YW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_avg_YW_Duration__c</fullName>
        <formula>Evals_sum_YW_Duration__c / Evals_count_YW_Duration__c / 5</formula>
        <label>Evals - avg YW Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_avg_YW_apply_learnings__c</fullName>
        <formula>Evals_sum_YW_apply_learnings__c / Evals_count_YW_apply_learnings__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - avg YW apply learnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_avg_YW_content__c</fullName>
        <formula>Evals_sum_YW_content__c / Evals_count_YW_content__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - avg YW content</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_avg_YW_materials__c</fullName>
        <formula>Evals_sum_YW_materials__c / Evals_count_YW_materials__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - avg YW materials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_avg_YW_objectives__c</fullName>
        <formula>Evals_sum_YW_objectives__c / Evals_count_YW_objectives__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - avg YW objectives</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_avg_YW_recommend__c</fullName>
        <formula>Evals_sum_YW_recommend__c / Evals_count_YW_recommend__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evals - avg YW recommend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_avg_YW_theory_and_practice__c</fullName>
        <formula>Evals_sum_YW_theory_and_practice__c / Evals_count_YW_theory_and_practice__c / 5</formula>
        <label>Evals - avg YW theory and practice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evals_count_YW_Duration__c</fullName>
        <label>Evals - count YW Duration</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Your_Workshop_Duration__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_count_YW_apply_learnings__c</fullName>
        <label>Evals - count YW apply learnings</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Your_Workshop_apply_learnings__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_count_YW_content__c</fullName>
        <label>Evals - count YW content</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Your_Workshop_content__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_count_YW_materials__c</fullName>
        <label>Evals - count YW materials</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Your_Workshop_materials__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_count_YW_objectives__c</fullName>
        <label>Evals - count YW objectives</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Your_Workshop_objectives__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_count_YW_recommend__c</fullName>
        <label>Evals - count YW recommend</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Your_Workshop_recommend__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_count_YW_theory_and_practice__c</fullName>
        <label>Evals - count YW theory and practice</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Your_Workshop_theory_and_practice__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_count_request_further__c</fullName>
        <label>Evals - count request further</label>
        <summaryFilterItems>
            <field>Response_Evaluation__c.Requested_further_development__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_sum_YW_Duration__c</fullName>
        <label>Evals - sum YW Duration</label>
        <summarizedField>Response_Evaluation__c.SC_Your_Workshop_Duration__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_sum_YW_apply_learnings__c</fullName>
        <label>Evals - sum YW apply learnings</label>
        <summarizedField>Response_Evaluation__c.SC_Your_Workshop_apply_learnings__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_sum_YW_content__c</fullName>
        <label>Evals - sum YW content</label>
        <summarizedField>Response_Evaluation__c.SC_Your_Workshop_content__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_sum_YW_materials__c</fullName>
        <label>Evals - sum YW materials</label>
        <summarizedField>Response_Evaluation__c.SC_Your_Workshop_materials__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_sum_YW_objectives__c</fullName>
        <label>Evals - sum YW objectives</label>
        <summarizedField>Response_Evaluation__c.SC_Your_Workshop_objectives__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_sum_YW_recommend__c</fullName>
        <label>Evals - sum YW recommend</label>
        <summarizedField>Response_Evaluation__c.SC_Your_Workshop_recommend__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evals_sum_YW_theory_and_practice__c</fullName>
        <label>Evals - sum YW theory and practice</label>
        <summarizedField>Response_Evaluation__c.SC_Your_Workshop_theory_and_practice__c</summarizedField>
        <summaryForeignKey>Response_Evaluation__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evaluation_Survey_URL__c</fullName>
        <formula>Evaluation_Survey__r.URL__c &amp; &quot;-&quot; &amp; LOWER(LEFT(TEXT(Language__c),3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluation Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Jobs with evaluation survey</relationshipLabel>
        <relationshipName>Workshop_Evaluation_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluation_Survey_responses__c</fullName>
        <inlineHelpText>Number of evaluation responses received</inlineHelpText>
        <label>Evaluation Survey responses</label>
        <summaryFilterItems>
            <field>Participant__c.Survey_Evaluation_status__c</field>
            <operation>notEqual</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>Participant__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Agreed__c</fullName>
        <inlineHelpText>Expenses agreed with the presenter for this job.
This comment will appear on the briefing sheet</inlineHelpText>
        <label>Expenses Agreed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FXMaterialTotal__c</fullName>
        <label>zFX Material Total</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FXProfServTotal__c</fullName>
        <label>zFX Prof Serv Total</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Conv__c</fullName>
        <description>Exchange Rate</description>
        <inlineHelpText>Enter the exchange rate as ____ per ____</inlineHelpText>
        <label>FX Conv</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Fixed_Presenter_Fee__c</fullName>
        <inlineHelpText>Where a fixed amount is agreed for a presenter and no ENS or Marketing commission is related to this part of the Professional Fee
Amounts brought up from Job Items 
(You don&apos;t need to add amounts)</inlineHelpText>
        <label>FX Fixed Presenter Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Materials_Total__c</fullName>
        <inlineHelpText>Amounts brought up from Job Items
(You don&apos;t need to add amounts)</inlineHelpText>
        <label>FX Materials Total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Prof_Serv_Total__c</fullName>
        <inlineHelpText>Amounts brought up from Job Items
(You don&apos;t need to add amounts)</inlineHelpText>
        <label>FX Prof Serv Total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Total__c</fullName>
        <formula>FX_Materials_Total__c  +  
FX_Prof_Serv_Total__c +
 FX_Travel_Time_Total__c + 
FX_Fixed_Presenter_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field</inlineHelpText>
        <label>FX Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Travel_Time_Total__c</fullName>
        <inlineHelpText>Where the total amount of Travel Time charged is paid to the consultant
Amounts brought up from Job Items
(You don&apos;t need to add amounts)</inlineHelpText>
        <label>FX Travel Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Type__c</fullName>
        <inlineHelpText>From FmPro</inlineHelpText>
        <label>FX Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FX_Value__c</fullName>
        <inlineHelpText>From FMPro</inlineHelpText>
        <label>Recon Total PS FX</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fac1_Peer_Review_Survey_URL__c</fullName>
        <formula>IF(
ISBLANK(Facilitator_1__c),
&quot;&quot;,
Peer_Review_Survey_URL__c +&quot;&amp;cid=&quot;&amp;Facilitator_1__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fac1 Peer Review Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fac1_Self_Review_Survey_URL__c</fullName>
        <formula>IF(
ISBLANK(Facilitator_1__c),
&quot;&quot;,
Self_Review_Survey_URL__c +&quot;&amp;cid=&quot;&amp;Facilitator_1__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fac1 Self Review Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fac2_Peer_Review_Survey_URL__c</fullName>
        <formula>IF(
ISBLANK(Facilitator_2__c),
&quot;&quot;,
Peer_Review_Survey_URL__c +&quot;&amp;cid=&quot;&amp;Facilitator_2__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fac2 Peer Review Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fac2_Self_Review_Survey_URL__c</fullName>
        <formula>IF(
ISBLANK(Facilitator_2__c),
&quot;&quot;,
Self_Review_Survey_URL__c +&quot;&amp;cid=&quot;&amp;Facilitator_2__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fac2 Self Review Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fac3_Peer_Review_Survey_URL__c</fullName>
        <formula>IF(
ISBLANK(Facilitator_3__c),
&quot;&quot;,
Peer_Review_Survey_URL__c +&quot;&amp;cid=&quot;&amp;Facilitator_3__c
)</formula>
        <label>Fac3 Peer Review Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fac3_Self_Review_Survey_URL__c</fullName>
        <formula>IF(
ISBLANK(Facilitator_3__c),
&quot;&quot;,
Self_Review_Survey_URL__c +&quot;&amp;cid=&quot;&amp;Facilitator_3__c
)</formula>
        <label>Fac3 Self Review Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilitator 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs as Facilitator 1</relationshipLabel>
        <relationshipName>Jobs_as_fac_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilitator 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs as Facilitator 2</relationshipLabel>
        <relationshipName>Jobs_as_fac_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilitator 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs as Facilitator 3</relationshipLabel>
        <relationshipName>Jobs_as_fac_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facilitator_emails__c</fullName>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>Facilitator emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_names__c</fullName>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>Facilitator names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Outcome_Briefing__c</fullName>
        <label>Final Outcome/Briefing</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Freight_AUD__c</fullName>
        <inlineHelpText>Enter the value of the cost of Freight for Public Programs in AUD</inlineHelpText>
        <label>Freight AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_FX__c</fullName>
        <inlineHelpText>Enter the value of the cost of Freight for Public Programs in FX</inlineHelpText>
        <label>Freight FX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Program_Type__c</fullName>
        <description>Identifies program type within contract</description>
        <inlineHelpText>Identifies program type within contract</inlineHelpText>
        <label>RT Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overview</fullName>
                </value>
                <value>
                    <fullName>Introductory</fullName>
                </value>
                <value>
                    <fullName>Foundational</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_Retainer_Rate__c</fullName>
        <formula>Recon_Total_JobValue_FX__c  /  Retainer_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly Retainer Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_for_CDP__c</fullName>
        <formula>FLOOR(Actual_number_of_days__c) * 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours for CDP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inc_RAIT_PFQ__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>select if RAIT is included in PFQ Survey</inlineHelpText>
        <label>Include RAIT with PFQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Number_Confirmation__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Record the ENS Invoice number</inlineHelpText>
        <label>Confirmation Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_due_date__c</fullName>
        <inlineHelpText>The date the consultants invoice is due for input on Consultant and Retainer jobs</inlineHelpText>
        <label>Invoice due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_18_ID__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_C_YTD_AUD_S__c</fullName>
        <label>Job C_YTD AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <description>Classifies job based on [Job Type] for reporting purposes</description>
        <formula>IF( OR(  ISPICKVAL(Job_Type__c ,&quot;Consulting&quot;),ISPICKVAL(Job_Type__c ,&quot;Retainer&quot;),ISPICKVAL(Job_Type__c ,&quot;Coaching&quot;)) , &quot;Consulting&quot;, &quot;Training&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job_Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Days__c</fullName>
        <inlineHelpText>For retainers &amp; consulting, enter the number of approved days for the retainer per the agreement with the client (based on 7hr days)
For training jobs, enter the number of face-to-face training days (eg for a 2+2 workshop you would enter 4 days)</inlineHelpText>
        <label>Job Days</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_F_YTD_AUD_S__c</fullName>
        <label>Job F_YTD AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_First_Date__c</fullName>
        <description>First date of job, taken as earliest date for the job per JOB_ITEMS object</description>
        <inlineHelpText>First date of job, taken as earliest date for the job per JOB_ITEMS object</inlineHelpText>
        <label>Job First Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Focus__c</fullName>
        <label>Job Focus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Job_Focus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Last_Cyear_AUD_S__c</fullName>
        <label>Job Last_Cyear AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Last_Date__c</fullName>
        <description>Last date of job per JOB_ITEMS</description>
        <inlineHelpText>Last date of job per JOB_ITEMS</inlineHelpText>
        <label>Job Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Last_Fyear_AUD_S__c</fullName>
        <label>Job Last_Fyear AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Last_Month_AUD_S__c</fullName>
        <label>Job Last_Month AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Last_Qtr_AUD_S__c</fullName>
        <label>Job Last_Qtr AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_MTD_AUD_S__c</fullName>
        <label>Job MTD AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <inlineHelpText>What the consulting/retainer we were helping the client with</inlineHelpText>
        <label>Job Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Next_Cyear_AUD_S__c</fullName>
        <label>Job Next_Cyear AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Next_Fyear_AUD_S__c</fullName>
        <label>Job Next_Fyear AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Next_Month_AUD_S__c</fullName>
        <label>Job Next_Month AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Next_Qtr_AUD_S__c</fullName>
        <label>Job Next_Qtr AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Number_Identifier__c</fullName>
        <label>Job Number Identifier</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Pax_Awarded__c</fullName>
        <description>Number of Awarded Participants related to the Job</description>
        <inlineHelpText>Number of Awarded Participants related to the Job</inlineHelpText>
        <label>Job Pax Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_QTD_AUD_S__c</fullName>
        <label>Job QTD AUD S</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Record_Type__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Record Type</label>
        <type>Text</type>
    </fields>
</CustomObject>